Updated the prototype
Signed-off-by: Martin Weise <martin.weise@tuwien.ac.at>